[project]
name = "fastdocs"
version = "0.1.0"
description = "Product documentation ASGI plugin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Anton Borisov", email = "ivan-kruzenstern@yandex.ru" }
]
keywords = ["documentation", "markdown", "mkdocs", "asgi", "starlette", "cms", "plugin"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
]
dependencies = [
    "starlette>=0.27.0",
    "aiofiles>=23.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "fastapi",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/Ferdinand-I/fastdocs"
Repository = "https://github.com/Ferdinand-I/fastdocs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_pages"]
include = ["fastapi_pages/static/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
